--- a/workloads/eks-example-dep.yaml
+++ b/workloads/eks-example-dep.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: eks-example
-        image: "159955208939.dkr.ecr.us-east-2.amazonaws.com/eks-example"
+        image: "159955208939.dkr.ecr.us-east-2.amazonaws.com/eks-example:63e2747b"
         imagePullPolicy: IfNotPresent
         resources:
           requests:
